fix(web): fixing colors, spacing, icon and pagecontainer

--- a/web/src/index.less
+++ b/web/src/index.less
@@ -5,6 +5,5 @@
 body {
   @apply bg-color bg-cover bg-image h-screen;
   font-family: 'Inter', sans-serif;
-  overflow-x: hidden;
   color: black;
 }
